fix front page spacing

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -16,6 +16,14 @@ body {
 	padding: 10px;
 }
 
+.margin-bottom {
+	margin-bottom: 20px;
+}
+
+.half-margin-bottom {
+	margin-bottom: 10px;
+}
+
 // NAV //
 
 .navbar {
